--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/pedro-henrique-fraga-arantes-53128117a/" target="_blank">Pedro Henrique Fraga Arantes</a>.
+    Page URL <a href="qrcodecomponent.html">My QR Code Component</a>.
   </div>
 </body>
 </html>
